--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
   <body class="text-center">
     <form class="form-signin" action="/" method="POST">
       <img class="mb-4" src="images/download.jpeg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
      
       <input type="text" name="fname" class="form-control top" placeholder="First Name" required autofocus>
       <input type="text" name="lname" class="form-control middle" placeholder="Last Name" required>
